--- a/JitPack/build.gradle
+++ b/JitPack/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'android-maven'
 }
 group = 'com.github.18647499996:MavenPlugin'
+version = 'v1.0.3'
 
 android {
     compileSdkVersion 31
