--- a/JitPack/build.gradle
+++ b/JitPack/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api 'com.github.18647499996:AndroidFrame:v2.0.5'
 
 }
 
